notification ui and cpu improvements